profireader bot contact, message welcome message

--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -130,6 +130,9 @@
                             <img class="person-small-cover" pr-image="" pr-no-image="{{ user_avatar_url }}">
                             {{user.full_name}}
                         </a>
+                    </li>
+
+                    <li ng-if="user" role="presentation" class="menu-profile">
                         <a pr_test="LogOut" class="login-profile" href="{{ url_auth_logout() }}">{{ _('Log out') }}</a>
                         <!--<ul class="dropdown-menu">
                             <li ng-show="user.id"><a href="{{ url_user_profile({user_id:user.id}) }}">{{ _('Profile') }}</a></li>
