--- a/profapp/templates/company/companies.html
+++ b/profapp/templates/company/companies.html
@@ -206,7 +206,7 @@
             </div>
 
             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                <h3>
+                <h3 ng-show="!employments_loading && employments.length">
                     <a href="#" ng-click="setTable(false)" ng-style="!employments_layout_table?{color:'red'}:''"><i
                             class="fa fa-list pull-right" aria-hidden="true"></i></a>
                     <a href="#" ng-click="setTable(true)" ng-style="employments_layout_table?{color:'red'}:''"><i
