--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -1290,4 +1290,143 @@ body {
     margin-top: 20%;
   }
 }
+.panel-scroll-chat ul {
+  list-style: none;
+}
+.panel-scroll-chat .mar-btm {
+  margin-bottom: 15px;
+}
+.panel-scroll-chat .pad-all {
+  padding: 15px;
+}
+.panel-scroll-chat .media-block .media-left {
+  display: block;
+  float: left;
+}
+.panel-scroll-chat .img-sm {
+  width: 46px;
+  height: 46px;
+}
+.panel-scroll-chat .media-block .media-body {
+  display: block;
+  overflow: hidden;
+  width: auto;
+}
+.panel-scroll-chat .pad-hor {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.panel-scroll-chat .speech {
+  position: relative;
+  background: #b7dcfe;
+  color: #317787;
+  display: inline-block;
+  border-radius: 0;
+  padding: 12px 20px;
+  max-width: 100%;
+}
+.panel-scroll-chat p.speech-content {
+  width: 100%;
+  overflow-x: auto;
+}
+.panel-scroll-chat .speech:before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 0;
+  height: 0;
+  left: 0;
+  top: 0;
+  border-top: 7px solid transparent;
+  border-bottom: 7px solid transparent;
+  border-right: 7px solid #b7dcfe;
+  margin: 15px 0 0 -6px;
+}
+.panel-scroll-chat .speech-right > .speech:before {
+  left: auto;
+  right: 0;
+  border-top: 7px solid transparent;
+  border-bottom: 7px solid transparent;
+  border-left: 7px solid #ffdc91;
+  border-right: 0;
+  margin: 15px -6px 0 0;
+}
+.panel-scroll-chat .speech .media-heading {
+  font-size: 1.2em;
+  color: #317787;
+  display: block;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  margin-bottom: 10px;
+  padding-bottom: 5px;
+  font-weight: 300;
+}
+.panel-scroll-chat .speech-time {
+  margin-top: 20px;
+  margin-bottom: 0;
+  font-size: .8em;
+  font-weight: 300;
+}
+.panel-scroll-chat .media-block .media-right {
+  float: right;
+}
+.panel-scroll-chat .speech-right {
+  text-align: right;
+}
+.panel-scroll-chat .pad-hor {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.panel-scroll-chat .speech-right > .speech {
+  background: #ffda87;
+  color: #a07617;
+  text-align: right;
+}
+.panel-scroll-chat .speech-right > .speech .media-heading {
+  color: #a07617;
+}
+.panel-scroll-chat .btn-primary,
+.panel-scroll-chat .btn-primary:focus,
+.panel-scroll-chat .btn-hover-primary:hover,
+.panel-scroll-chat .btn-hover-primary:active,
+.panel-scroll-chat .btn-hover-primary.active,
+.panel-scroll-chat .btn.btn-active-primary:active,
+.panel-scroll-chat .btn.btn-active-primary.active,
+.panel-scroll-chat .dropdown.open > .btn.btn-active-primary,
+.panel-scroll-chat .btn-group.open .dropdown-toggle.btn.btn-active-primary {
+  background-color: #579ddb;
+  border-color: #5fa2dd;
+  color: #fff !important;
+}
+.panel-scroll-chat .btn {
+  cursor: pointer;
+  /* background-color: transparent; */
+  color: inherit;
+  padding: 6px 12px;
+  border-radius: 0;
+  border: 1px solid 0;
+  font-size: 11px;
+  line-height: 1.42857;
+  vertical-align: middle;
+  -webkit-transition: all .25s;
+  transition: all .25s;
+}
+.panel-scroll-chat .form-control {
+  font-size: 11px;
+  height: 100%;
+  border-radius: 0;
+  box-shadow: none;
+  border: 1px solid #e9e9e9;
+  transition-duration: .5s;
+}
+.panel-scroll-chat .nano > .nano-pane {
+  background-color: rgba(0, 0, 0, 0.1);
+  position: absolute;
+  width: 5px;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  opacity: 0;
+  -webkit-transition: all .7s;
+  transition: all .7s;
+}
 /*# sourceMappingURL=style.css.map */
