--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -155,7 +155,6 @@ body {
   float: right;
 }
 
-
 .menu-company.menu-company-portal a {
   float: right;
 }
@@ -176,7 +175,6 @@ body {
   background-color: @color-links-hover;
   padding: 15px;
 }
-
 
 .company-logo img {
   margin-right: -15px;
@@ -627,7 +625,7 @@ body {
     border-radius: 5px;
     color: #383838;
   }
-  .portal{
+  .portal {
     margin-top: 20px;
     float: right;
   }
@@ -648,8 +646,6 @@ body {
     box-shadow: @shadow-highlight;
     transition: @transition-slow;
   }
-
-
 
   button {
     padding: 5px;
@@ -1510,5 +1506,146 @@ body {
 
   .help-page {
     margin-top: 20%;
+  }
+}
+
+.panel-scroll-chat {
+  ul {
+    list-style: none;
+  }
+
+
+  .mar-btm {
+    margin-bottom: 15px;
+  }
+
+
+  .pad-all {
+    padding: 15px;
+  }
+
+  .media-block .media-left {
+    display: block;
+    float: left;
+  }
+  .img-sm {
+    width: 46px;
+    height: 46px;
+  }
+  .media-block .media-body {
+    display: block;
+    overflow: hidden;
+    width: auto;
+  }
+  .pad-hor {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .speech {
+    position: relative;
+    background: #b7dcfe;
+    color: #317787;
+    display: inline-block;
+    border-radius: 0;
+    padding: 12px 20px;
+    max-width: 100%;
+  }
+
+  p.speech-content {
+    width: 100%;
+    overflow-x: auto;
+  }
+
+  .speech:before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 0;
+    height: 0;
+    left: 0;
+    top: 0;
+    border-top: 7px solid transparent;
+    border-bottom: 7px solid transparent;
+    border-right: 7px solid #b7dcfe;
+    margin: 15px 0 0 -6px;
+  }
+  .speech-right > .speech:before {
+    left: auto;
+    right: 0;
+    border-top: 7px solid transparent;
+    border-bottom: 7px solid transparent;
+    border-left: 7px solid #ffdc91;
+    border-right: 0;
+    margin: 15px -6px 0 0;
+  }
+  .speech .media-heading {
+    font-size: 1.2em;
+    color: #317787;
+    display: block;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    margin-bottom: 10px;
+    padding-bottom: 5px;
+    font-weight: 300;
+  }
+  .speech-time {
+    margin-top: 20px;
+    margin-bottom: 0;
+    font-size: .8em;
+    font-weight: 300;
+  }
+  .media-block .media-right {
+    float: right;
+  }
+  .speech-right {
+    text-align: right;
+  }
+  .pad-hor {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
+  .speech-right > .speech {
+    background: #ffda87;
+    color: #a07617;
+    text-align: right;
+  }
+  .speech-right > .speech .media-heading {
+    color: #a07617;
+  }
+  .btn-primary, .btn-primary:focus, .btn-hover-primary:hover, .btn-hover-primary:active, .btn-hover-primary.active, .btn.btn-active-primary:active, .btn.btn-active-primary.active, .dropdown.open > .btn.btn-active-primary, .btn-group.open .dropdown-toggle.btn.btn-active-primary {
+    background-color: #579ddb;
+    border-color: #5fa2dd;
+    color: #fff !important;
+  }
+  .btn {
+    cursor: pointer;
+    /* background-color: transparent; */
+    color: inherit;
+    padding: 6px 12px;
+    border-radius: 0;
+    border: 1px solid 0;
+    font-size: 11px;
+    line-height: 1.42857;
+    vertical-align: middle;
+    -webkit-transition: all .25s;
+    transition: all .25s;
+  }
+  .form-control {
+    font-size: 11px;
+    height: 100%;
+    border-radius: 0;
+    box-shadow: none;
+    border: 1px solid #e9e9e9;
+    transition-duration: .5s;
+  }
+  .nano > .nano-pane {
+    background-color: rgba(0, 0, 0, 0.1);
+    position: absolute;
+    width: 5px;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    opacity: 0;
+    -webkit-transition: all .7s;
+    transition: all .7s;
   }
 }
