--- a/profapp/templates/_ruslan/_index_layout.html
+++ b/profapp/templates/_ruslan/_index_layout.html
@@ -30,7 +30,7 @@
     <link href="{{ static_address('css/style.css') }}" rel="stylesheet">
     <link href="{{ static_address('css/icons.css') }}" rel="stylesheet">
     <link href="{{ static_address('css/oles.css') }}" rel="stylesheet">
-{#    <link rel="stylesheet" type="text/css" href="/static/new/jquery-datetimepicker/jquery.datetimepicker.css">#}
+    {#    <link rel="stylesheet" type="text/css" href="/static/new/jquery-datetimepicker/jquery.datetimepicker.css">#}
 
 
 {% endblock styles %}
@@ -53,7 +53,7 @@
         <script src="{{ static_address('new/jquery/jquery.min.js') }}"></script>
         <script src="{{ static_address('new/jquery/jquery-ui.js') }}"></script>
 
-       <script src="{{ static_address('js/underscore-min.js') }}"></script>
+        <script src="{{ static_address('js/underscore-min.js') }}"></script>
 
         <script src="{{ static_address('new/bootstrap/js/bootstrap.js') }}"></script>
 
@@ -88,22 +88,40 @@
 
 
     <script src="{{ static_address('new/moment/moment.min.js') }}"></script>
-    {% if g.lang != 'en' %}<script src="{{ static_address('new/moment/' + g.lang + '.js') }}"></script>{% endif %}
-    <script type="text/javascript"  src="{{ static_address('new/eonasdan-bootstrap-datetimepicker/bootstrap-datetimepicker.min.js') }}"></script>
-    <link rel="stylesheet"          href="{{ static_address('new/eonasdan-bootstrap-datetimepicker/bootstrap-datetimepicker.min.css') }}" />
+    {% if g.lang != 'en' %}
+        <script src="{{ static_address('new/moment/' + g.lang + '.js') }}"></script>{% endif %}
+    <script type="text/javascript"
+            src="{{ static_address('new/eonasdan-bootstrap-datetimepicker/bootstrap-datetimepicker.min.js') }}"></script>
+    <link rel="stylesheet"
+          href="{{ static_address('new/eonasdan-bootstrap-datetimepicker/bootstrap-datetimepicker.min.css') }}"/>
 
 
     <script src="{{ static_address('angular-ajax-validator/ngAjaxValidator.js') }}"></script>
-{#    <script src="{{ static_address('angular-ui-slider/slider.js') }}"></script>#}
+    {#    <script src="{{ static_address('angular-ui-slider/slider.js') }}"></script>#}
+    {#    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>#}
+
     <script src="{{ static_address('js/profireader_angular.js') }}"></script>
 
+    {% if g.user.id %}
+        <script src="{{ static_address('new/socket.io.js/socket.io.js') }}"></script>
 
+        <script>
 
-    <script>
-        {% for message in get_flashed_messages() %}
-            add_message('{{ message }}', 'warning');
-        {% endfor %}
-    </script>
+            var pr_chat_socket = io.connect('//socket.{{ MAIN_DOMAIN }}');
+
+            pr_chat_socket.on('set_unread_message_count', function (resp) {
+                var total = 0;
+                $.each(resp['unread_message_count'], function (chatroom_id, unread) {
+                    total += unread;
+                });
+                angularControllerFunction('user_controller', 'set_unread_message_count')(total);
+            });
+
+            {% for message in get_flashed_messages() %}
+                add_message('{{ message }}', 'warning');
+            {% endfor %}
+        </script>
+    {% endif %}
 
 {%- endblock head %}
 
