--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -1510,13 +1510,14 @@ body {
 }
 
 .panel-scroll-chat {
+
   ul {
     list-style: none;
   }
 
 
   .mar-btm {
-    margin-bottom: 15px;
+    padding-bottom: 15px;
   }
 
 
@@ -1611,41 +1612,5 @@ body {
   .speech-right > .speech .media-heading {
     color: #a07617;
   }
-  .btn-primary, .btn-primary:focus, .btn-hover-primary:hover, .btn-hover-primary:active, .btn-hover-primary.active, .btn.btn-active-primary:active, .btn.btn-active-primary.active, .dropdown.open > .btn.btn-active-primary, .btn-group.open .dropdown-toggle.btn.btn-active-primary {
-    background-color: #579ddb;
-    border-color: #5fa2dd;
-    color: #fff !important;
-  }
-  .btn {
-    cursor: pointer;
-    /* background-color: transparent; */
-    color: inherit;
-    padding: 6px 12px;
-    border-radius: 0;
-    border: 1px solid 0;
-    font-size: 11px;
-    line-height: 1.42857;
-    vertical-align: middle;
-    -webkit-transition: all .25s;
-    transition: all .25s;
-  }
-  .form-control {
-    font-size: 11px;
-    height: 100%;
-    border-radius: 0;
-    box-shadow: none;
-    border: 1px solid #e9e9e9;
-    transition-duration: .5s;
-  }
-  .nano > .nano-pane {
-    background-color: rgba(0, 0, 0, 0.1);
-    position: absolute;
-    width: 5px;
-    right: 0;
-    top: 0;
-    bottom: 0;
-    opacity: 0;
-    -webkit-transition: all .7s;
-    transition: all .7s;
-  }
+
 }
