--- a/profapp/templates/messenger/messenger.html
+++ b/profapp/templates/messenger/messenger.html
@@ -680,7 +680,7 @@
                             <button ng-disabled="message_cant_be_sent()"
                                     title="{{ message_cant_be_sent()?_(message_cant_be_sent()):'' }}"
                                     ng-click="send_message()"
-                                    class="btn btn-warning btn-sm" id="btn-chat">
+                                    class="btn btn-info btn-sm" id="btn-chat">
                                 {{ _('Send message') }}</button>
                         </span>
                                 </div>
