--- a/profapp/templates/front/wood/block_user.html
+++ b/profapp/templates/front/wood/block_user.html
@@ -1,18 +1,26 @@
-{% set p_main_domain = '//' + MAIN_DOMAIN %}
 {% set url_join = _URL_JOIN() %}
+{% set p_main_domain = '//' + MAIN_DOMAIN %}
+<div>
 
-<a style="{% if not g.user %}display: none; {% endif %}" aria-haspopup="true" id="profireader_user_link"
-   href="{% if g.user %}{{ p_main_domain }}/users/profile/{{ g.user.id }}{% else %}{{ url_join }}{% endif %}"><img
-        {{ prImageUrl(g.user.avatar.url if g.user else static_address('images/0.gif'), position = 'top') }}
-        class="user-avatar"/></a>
+    <!--If user is logged in-->
+    <a style="{% if not g.user %}display: none;{% endif %}"
+       class="userpic" href="{% if g.user %}{{ p_main_domain }}/users/profile/{{ g.user.id }}{% endif %}"
+       id="profireader_user_link"><img
+            src="{{ g.user.avatar.url if g.user else '' }}" alt="" class="img-circle"></a>
 
-<a id="profireader_link" style="{% if g.user %}display: none; {% endif %}" target="profireader_subscribe"
-   href="{% if g.user %}{{ p_main_domain }}/{% else %}{{ url_join }}{% endif %}"><img
-        class="profireader-logo" src="{{ static_address('favicon.ico') }}"/></a>
+    <!--If user is not logged in-->
+    <a style="{% if g.user %}display: none;{% endif %}"
+       class="pr-btn" href="{{ url_join }}" id="profireader_link" target="profireader_subscribe">
+        <img src="{{ static_address('images/profireader-logo.svg') }}">
+    </a>
+
+</div>
+
 <script>
     _USER = {% if g.user %}{{ g.user.get_client_side_dict()|tojson }}{% else %}{}{% endif %};
 
     window.addEventListener("message", function (messageevent) {
+        console.log(messageevent);
         if (!messageevent.data || !messageevent.data['profireader_session_id']) {
             return false;
         }
@@ -26,9 +34,9 @@
             _USER = messageevent.data.user;
             $('#profireader_user_link').attr('href', '{{ p_main_domain }}/users/profile/' + messageevent.data.user.id);
             $('#profireader_user_link span').html(messageevent.data.welcome);
-            $('#profireader_user_link img').css('background-image', 'url(' + messageevent.data.user.avatar.url + ')');
+            $('#profireader_user_link img').attr('src', messageevent.data.user.avatar.url);
             $('#profireader_user_link').show();
-            $('#profireader_link').attr('href', '{{ p_main_domain }}').hide();
+            $('#profireader_link').hide();
         }
         else if (messageevent.data && !messageevent.data.user) {
             _USER = {};
@@ -36,7 +44,7 @@
             $('#profireader_user_link span').html(messageevent.data.welcome);
             $('#profireader_user_link img').css('background-image', 'none');
             $('#profireader_user_link').hide();
-            $('#profireader_link').attr('href', '{{ url_join }}').show();
+            $('#profireader_link').show();
         }
     }, false);
     $('body').prepend('<iframe style="position: absolute; width: 1px; height: 1px; visibility: hidden; left: -1px; top: -1px;" src="{{ p_main_domain }}/tools/SSO/' + $.cookie('beaker.session.id') + '/"></iframe>');
