--- a/profapp/templates/front/wood/layout.html
+++ b/profapp/templates/front/wood/layout.html
@@ -9,44 +9,47 @@
     <title>{% block title %}{{ _('%(portal_name)s', {'portal_name': portal.name}) }}{% endblock %}</title>
     <meta name="description" content="{% block description %}{% endblock %}">
     {% block og -%}
-    <meta property="og:site_name" content="{% block og_name %}{{ portal.name }}{% endblock %}"/>
-    <meta property="og:title" content="{% block og_title %}{{ self.title()|trim }}{% endblock %}"/>
-    <meta property="og:description" content="{% block og_description %}{{ self.description()|trim }}{% endblock %}"/>
-    <meta property="og:image" content="{% block og_img_url %}{{ portal.logo.url }}{% endblock %}"/>
+        <meta property="og:site_name" content="{% block og_name %}{{ portal.name }}{% endblock %}"/>
+        <meta property="og:title" content="{% block og_title %}{{ self.title()|trim }}{% endblock %}"/>
+        <meta property="og:description"
+              content="{% block og_description %}{{ self.description()|trim }}{% endblock %}"/>
+        <meta property="og:image" content="{% block og_img_url %}{{ portal.logo.url }}{% endblock %}"/>
     {%- endblock %}
 
-<link rel="shortcut icon"
-      href="{{ fileUrl(portal.favicon_file_id, if_no_file=static_address('favicon.ico')) }}" type="image/x-icon"/>    
+    <link rel="shortcut icon"
+          href="{{ fileUrl(portal.favicon_file_id, if_no_file=static_address('favicon.ico')) }}" type="image/x-icon"/>
 
-      <link href="{{ static_address('front/' + portal.layout.name + '/css/bootstrap.min.css') }}" rel="stylesheet">
-        <link href="{{ static_address('front/' + portal.layout.name + '/css/jasny-bootstrap.min.css') }}" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
-        <link href="{{ static_address('front/' + portal.layout.name + '/fonts/font-awesome/css/font-awesome.min.css') }}" rel="stylesheet">
-        <link href="{{ static_address('front/' + portal.layout.name + '/css/custom.css') }}" rel="stylesheet">
-        
-        <link href="{{ static_address('css/article.css') }}" rel="stylesheet">
-<link href="{{ static_address('front/' + portal.layout.name + '/css/article.css') }}" rel="stylesheet">
-             <script src="{{ static_address('new/moment/moment.min.js') }}"></script>
-{% if g.lang != 'en' -%}
-    <script src="{{ static_address('new/moment/' + g.lang + '.js') }}"></script>
-{%- endif %}
-      
-            {% if portal.advs['bottom_banner'] -%}
-      {{ portal.advs['head_end']|safe }}
+    <link href="{{ static_address('front/' + portal.layout.name + '/css/bootstrap.min.css') }}" rel="stylesheet">
+    <link href="{{ static_address('front/' + portal.layout.name + '/css/jasny-bootstrap.min.css') }}" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&subset=cyrillic,cyrillic-ext,latin-ext"
+          rel="stylesheet">
+    <link href="{{ static_address('front/' + portal.layout.name + '/fonts/font-awesome/css/font-awesome.min.css') }}"
+          rel="stylesheet">
+    <link href="{{ static_address('front/' + portal.layout.name + '/css/custom.css') }}" rel="stylesheet">
+
+    <link href="{{ static_address('css/article.css') }}" rel="stylesheet">
+    <link href="{{ static_address('front/' + portal.layout.name + '/css/article.css') }}" rel="stylesheet">
+    <script src="{{ static_address('front/' + portal.layout.name + '/js/jquery-3.1.0.min.js') }}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
+    <script src="{{ static_address('new/moment/moment.min.js') }}"></script>
+    {% if g.lang != 'en' -%}
+        <script src="{{ static_address('new/moment/' + g.lang + '.js') }}"></script>
     {%- endif %}
-    
+
+    {% if portal.advs['bottom_banner'] -%}
+        {{ portal.advs['head_end']|safe }}
+    {%- endif %}
+
 </head>
 <body class="{% block body_class %}{% endblock %}">
 {{ portal.advs['body_begin']|safe }}
 {% block body %}{% endblock %}
-<script src="{{ static_address('front/' + portal.layout.name + '/js/jquery-3.1.0.min.js') }}"></script>
-       <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.js"></script>
 
-        <script src="{{ static_address('front/' + portal.layout.name + '/js/bootstrap.min.js') }}"></script>
-        <script src="{{ static_address('front/' + portal.layout.name + '/js/jasny-bootstrap.min.js') }}"></script>
-        <script src="{{ static_address('front/' + portal.layout.name + '/js/jquery.fittext.js') }}"></script>
-        <script src="{{ static_address('front/' + portal.layout.name + '/js/custom.js') }}"></script>
 
+<script src="{{ static_address('front/' + portal.layout.name + '/js/bootstrap.min.js') }}"></script>
+<script src="{{ static_address('front/' + portal.layout.name + '/js/jasny-bootstrap.min.js') }}"></script>
+<script src="{{ static_address('front/' + portal.layout.name + '/js/jquery.fittext.js') }}"></script>
+<script src="{{ static_address('front/' + portal.layout.name + '/js/custom.js') }}"></script>
 
 
 {{ portal.advs['body_end']|safe }}
