--- a/profapp/templates/front/wood/layout_company_page.html
+++ b/profapp/templates/front/wood/layout_company_page.html
@@ -5,7 +5,16 @@
 
 
 {% block body %}
+   <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-lg-10">
+                <div class="clearfix">
+                    <main class="center-block" role="main">
     {% include 'company_menu.html' %}
-    
     {% block company_content %}{% endblock %}
+                    </main>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
