--- a/profapp/templates/messenger/messenger.html
+++ b/profapp/templates/messenger/messenger.html
@@ -75,38 +75,12 @@
                 var ret = [];
                 $.each(chat.users, function (user_id, user) {
                     if (user.id !== $scope.me_user_id) {
-                        ret.push(user.full_name);
+                        ret.push(user['full_name']);
                     }
                 });
                 return ret.join(', ');
             };
 
-            {#            $scope.refresh_chats = function () {#}
-            {#                $timeout(function () {#}
-            {#                    if ($scope.checking_chats) {#}
-            {#                        $scope.refresh_chats();#}
-            {#                        return;#}
-            {#                    }#}
-            {#                    $ok($scope.refresh_chats_url(), {#}
-            {#                                chat_room_id: $scope.selected_chat_room_id,#}
-            {#                                last_message_id: $scope.get_last_message_id($scope.selected_chat_room_id),#}
-            {#                                check_for_unread_messages: true#}
-            {#                            },#}
-            {#                            function (resp) {#}
-            {#                                $scope.update_chat_room(resp);#}
-            {#                            }).finally(function () {#}
-            {#                        if (now() - window.lastUserActivity > 300) { // 5 minutes of inactivity#}
-            {#                            $scope.check_chats_delay = 60000; // check every minute#}
-            {#                            window.onUserActivity['messenger_check_chat'] = $scope.refresh_chats;#}
-            {#                        }#}
-            {#                        else {#}
-            {#                            $scope.check_chats_delay = 3000; // // user active check in 3 seconds#}
-            {#                            delete window.onUserActivity['messenger_check_chat'];#}
-            {#                        }#}
-            {#                        $scope.refresh_chats();#}
-            {#                    });#}
-            {#                }, $scope.check_chats_delay);#}
-            {#            };#}
 
             $scope.load_older_messages = function () {
 
@@ -127,8 +101,6 @@
                         }
                     });
                 })($scope.selected_chat_room_id);
-
-
             };
 
             $scope.select_chat_room = function (chat_room) {
@@ -147,6 +119,7 @@
                             last_message_id: $scope.get_last_message_id($scope.selected_chat_room_id),
                             check_for_unread_messages: true
                         }, function (resp) {
+                            console.log(resp);
                             if ($scope.selected_chat_room_id && $scope.selected_chat_room_id === $scope.loading_chatroom_id) {
                                 $scope.update_chat_room(resp, false, true, true);
                                 pr_chat_socket.emit('select_chat_room_id', {'select_chat_room_id': $scope.selected_chat_room_id});
@@ -254,7 +227,7 @@
                     }
                 });
                 angularControllerFunction('user_controller', 'set_unread_message_count')(total_unread);
-            }
+            };
 
             $scope.stickToBottom = function (chatroom_id, fromserver, sticktotop, force, instant) {
 
@@ -326,9 +299,7 @@
 
             };
 
-
             $scope.append_messages = function (chat_room_id, messages) {
-
                 var current_chat = $scope.loaded_chats[chat_room_id];
                 if (!current_chat) return;
                 var existing_messages = $scope.loaded_chats[chat_room_id]['messages'];
@@ -349,10 +320,8 @@
                             }
                         }
                     }
-
                 });
             };
-
 
             $scope.search_community = function (full_reload) {
                 if ($scope.selected_messenger_menu !== 'community') {
@@ -441,12 +410,13 @@
                 if ($scope.message_text.trim() == '') return 'please type something';
                 if ($scope.message_text.length > 500) return 'message must be shorter than 500 symbols';
                 return false
-            }
+            };
 
             $scope.init_messenger = function () {
                 $scope.set_selected_menu('chat');
 
                 pr_chat_socket.on('new_message', function (resp) {
+                    console.log(resp);
                     $timeout(function () {
                         $scope.append_messages(resp['chat_room_id'], [resp['message']]);
                         $scope.stickToBottom(resp['chat_room_id'], {'messages': [resp['message']]}, false, false, false);
@@ -486,20 +456,11 @@
                             $scope.send_message();
                         }
                         event.preventDefault();
-
                     }
-
-
                 });
             };
-
-            {% raw %}
-
-        }
-        ]);
-        {% endraw %}
+        }]);
     </script>
-
 
     {% raw %}
     <div ng-controller="messenger" id="messenger-controller" ng-cloak ng-init="init_messenger()">
@@ -646,22 +607,29 @@
                                         <li ng-repeat="message in loaded_chats[selected_chat_room_id]['messages']"
                                             ng-class="{'right': message['from_user_id'] == me_user_id, 'left': message['from_user_id'] != me_user_id}"
                                             class="mar-btm">
-                                            <div ng-if="message.session" class="tac"><span style="color: red;">{{ _('chat session started %(chat_session_start)s', {chat_session_start: moment(message.cr_tm)}) }}</span>
+                                            <div ng-if="message.session" class="tac red">{{ _('chat session started
+                                                %(chat_session_start)s', {chat_session_start: moment(message.cr_tm)}) }}
                                             </div>
-                                    <div class="chat-img"
-                                          ng-class="{'media-right': message['from_user_id'] == me_user_id, 'media-left': message['from_user_id'] != me_user_id}">
-                                        <img class="messenger-avatar" pr-image-position="center center"
-                                             pr-image-url="{{ loaded_chats[selected_chat_room_id]['users'][message['from_user_id']]['avatar']['url'] }}"/>
-                                    </div>
+                                            <div class="chat-img"
+                                                 ng-class="{'media-right': message['from_user_id'] == me_user_id, 'media-left': message['from_user_id'] != me_user_id}">
+                                                <img class="messenger-avatar" pr-image-position="center center"
+                                                     pr-image-url="{{ loaded_chats[selected_chat_room_id]['users'][message['from_user_id']]['avatar']['url'] }}"/>
+                                            </div>
 
-                                            <div class="media-body pad-hor" ng-class="{'speech-right': message['from_user_id'] == me_user_id}">
+                                            <div class="media-body pad-hor"
+                                                 ng-class="{'speech-right': message['from_user_id'] == me_user_id}">
                                                 <div class="speech">
                                                     <a class="media-heading">{{
-                                                        loaded_chats[selected_chat_room_id]['users'][message['to_user_id']]['full_name']
+                                                        loaded_chats[selected_chat_room_id]['users'][message['from_user_id']]['full_name']
                                                         }}</a>
-                                                    <p class="speech-content" ng-if="message['from_user_id'] == profireader_user_id" ng-bind-html="message.content"></p>
-                                                    <p class="speech-content" ng-if="message['from_user_id'] != profireader_user_id" ng-bind="message.content"></p>
-                                                    <p class="speech-time"><i class="fa fa-clock-o fa-fw"></i> {{ moment(message.cr_tm) }}</p>
+                                                    <p class="speech-content"
+                                                       ng-if="message['from_user_id'] == profireader_user_id"
+                                                       ng-bind-html="message.content"></p>
+                                                    <p class="speech-content"
+                                                       ng-if="message['from_user_id'] != profireader_user_id"
+                                                       ng-bind="message.content"></p>
+                                                    <p class="speech-time"><i class="fa fa-clock-o fa-fw"></i> {{
+                                                        moment(message.cr_tm) }}</p>
                                                 </div>
 
                                             </div>
