--- a/profapp/templates/_ruslan/_index_layout.html
+++ b/profapp/templates/_ruslan/_index_layout.html
@@ -109,7 +109,8 @@
 
             var pr_chat_socket = io.connect('//socket.{{ MAIN_DOMAIN }}');
 
-            pr_chat_socket.on('set_unread_message_count', function (resp) {
+            pr_chat_socket.on('new_message', function (resp) {
+                console.log(resp);
                 var total = 0;
                 $.each(resp['unread_message_count'], function (chatroom_id, unread) {
                     total += unread;
