--- a/profapp/templates/front/wood1/company_contacts.html
+++ b/profapp/templates/front/wood1/company_contacts.html
@@ -2,89 +2,77 @@
 {% block company_content %}
 
 
-{% block head %}
-    {{ super() }}
-    <script src="https://maps.googleapis.com/maps/api/js?key={{ secret_data.GOOGLE_MAP_KEY }}"></script>
-    <style>
-        #map {
-            width: 100%;
-            height: 400px;
-        }
-    </style>
-    <script>
-        function initialize() {
-            var mapCanvas = document.getElementById('map');
-            var mapOptions = {
-                center: new google.maps.LatLng({{ member_company['lat'] }}, {{ member_company['lon'] }}),
-                zoom: 15,
-                mapTypeId: google.maps.MapTypeId.ROADMAP
+    {% block head %}
+        {{ super() }}
+        <script src="https://maps.googleapis.com/maps/api/js?key={{ secret_data.GOOGLE_MAP_KEY }}"></script>
+        <style>
+            #map {
+                width: 100%;
+                height: 400px;
             }
-            var map = new google.maps.Map(mapCanvas, mapOptions)
+        </style>
+        <script>
+            function initialize() {
+                var mapCanvas = document.getElementById('map');
+                var mapOptions = {
+                    center: new google.maps.LatLng({{ member_company['lat'] }}, {{ member_company['lon'] }}),
+                    zoom: 15,
+                    mapTypeId: google.maps.MapTypeId.ROADMAP
+                }
+                var map = new google.maps.Map(mapCanvas, mapOptions)
 
-            var marker = new google.maps.Marker({
-                position: {'lat': {{ member_company['lat'] }}, 'lng': {{ member_company['lon'] }}},
-                map: map,
-                title: '{{ member_company['name'] }}'
-            });
+                var marker = new google.maps.Marker({
+                    position: {'lat': {{ member_company['lat'] }}, 'lng': {{ member_company['lon'] }}},
+                    map: map,
+                    title: '{{ member_company['name'] }}'
+                });
 
-        }
-        google.maps.event.addDomListener(window, 'load', initialize);
-    </script>
-{% endblock %}
+            }
+            google.maps.event.addDomListener(window, 'load', initialize);
+        </script>
+    {% endblock %}
 
 
-    <div id="contacts" class="tab-pane fade">
-                                    <!--Company contacts-->
-                                    <div class="row">
-                                        <p class="contacts-header">{{ _('Contact persons') }}</p>
-                                        {% for employment in member_company.employments if employment['status'] == 'ACTIVE' %}
-                                        <div class="contact col-md-4">
-                                            <a class="contact-userpic" href="#"><img class="img-circle" src="{{ employment.user['avatar']['url'] }}"></a>
-                                            <a href="#"><h6 class="contact-name">{{ employment.user['full_name'] }}</h6></a>
-                                            {% if employment['position'] %}{{ employment['position'] }}{% endif %}
-                                        <a class="message" onclick="openMessageDialog('{{ employment.user['id'] }}', '{{ employment.user['full_name'] }}')"
-                               data-user-id="{{ employment.user['id'] }}" href="#"><i class="fa fa-envelope" aria-hidden="true" style="margin-right: 5px"></i>{{ _('send message') }}</a>
-                                        </div>
-                                        {% endfor %}
+    <div id="contacts" class="tab-pane">
+        <!--Company contacts-->
+        <div class="row">
+            <p class="contacts-header">{{ _('Contact persons') }}</p>
+            {% for employment in member_company.employments if employment['status'] == 'ACTIVE' %}
+                <div class="contact col-md-4">
+                    <a class="contact-userpic" href="#"><img class="img-circle"
+                                                             src="{{ employment.user['avatar']['url'] }}"></a>
+                    <a href="#"><h6 class="contact-name">{{ employment.user['full_name'] }}</h6></a>
+                    {% if employment['position'] %}{{ employment['position'] }}{% endif %}
+                    <a class="message"
+                       onclick="openMessageDialog('{{ employment.user['id'] }}', '{{ employment.user['full_name'] }}')"
+                       data-user-id="{{ employment.user['id'] }}" href="#"><i class="fa fa-envelope" aria-hidden="true"
+                                                                              style="margin-right: 5px"></i>{{ _('send message') }}
+                    </a>
+                </div>
+            {% endfor %}
 
-                                    </div>
-                                    <hr class="article-thumbnail-divider">
-                                    <!--Company adress-->
-                                    <div class="row">
-                                        <p class="contacts-header">Наша адреса</p>
-                                        
-                                        <div class="col-md-6 address">
-                                            <p><i class="fa fa-map-marker" aria-hidden="true" style="margin-right: 5px"></i>Україна, Львівська обл., м. Львів</p>
-                                            <p><i class="fa fa-inbox" aria-hidden="true" style="margin-right: 5px"></i>а/с 5911</p>
-                                            <p><i class="fa fa-phone" aria-hidden="true" style="margin-right: 5px"></i>0322 441 165</p>
-                                            <p><i class="fa fa-envelope" aria-hidden="true" style="margin-right: 5px"></i>derevo@derevo.com.ua</p>
-                                            <a href=""><i class="fa fa-home" aria-hidden="true" style="margin-right: 5px"></i>www.derevoobrobnyk.com</a>
-                                        </div>
-                                        <!--Google maps-->
-                                        <div class="col-md-6">
-
-                                        </div>
-                                    </div>
-                                    <hr class="article-thumbnail-divider">
-                                </div>
-
-    {% for employment in member_company.employments if employment['status'] == 'ACTIVE' %}
-        <div class="company-contact-item">
-            <table class="tablelist company_employees">
-                <tr>
-                    <td><img class="user-avatar" {{ prImageUrl(employment.user['avatar']['url']) }} /></td>
-                    <td>
-                        <div>{{ employment.user['full_name'] }}</div>
-                        <div>{% if employment['position'] %}{{ employment['position'] }}{% endif %}</div>
-                        <div>
-                            <a onclick="openMessageDialog('{{ employment.user['id'] }}', '{{ employment.user['full_name'] }}')"
-                               data-user-id="{{ employment.user['id'] }}" href="#"><span
-                                    class="fa fa-envelope mr05em"></span>{{ _('send message') }}</a></div>
-                    </td>
-                </tr>
-            </table>
         </div>
-    {% endfor %}
+        <hr class="article-thumbnail-divider">
+        <!--Company adress-->
+        <div class="row">
+            <p class="contacts-header">Наша адреса</p>
+
+            <div class="col-md-6 address">
+                <p><i class="fa fa-map-marker" aria-hidden="true" style="margin-right: 5px"></i>{{ [member_company['country'], member_company['region'], member_company['city']]|join(', ') }}</p>
+                {% if member_company['address'] %}<p><i class="fa fa-inbox" aria-hidden="true" style="margin-right: 5px"></i>{{ member_company['address'] }}</p>{% endif %}
+                {% if member_company['phone'] %}<p><i class="fa fa-phone" aria-hidden="true" style="margin-right: 5px"></i>{{ member_company['phone'] }}</p>{% endif %}
+                {% if member_company['fax'] %}<p><i class="fa fa-fax" aria-hidden="true" style="margin-right: 5px"></i>{{ member_company['fax'] }}</p>{% endif %}
+                {% if member_company['email'] %}<p><i class="fa fa-envelope" aria-hidden="true" style="margin-right: 5px"></i>{{ member_company['email'] }}</p>{% endif %}
+                {% if member_company['host'] %}<a href=""><i class="fa fa-home" aria-hidden="true" style="margin-right: 5px"></i>{{ member_company['host'] }}</a>{% endif %}
+            </div>
+            <!--Google maps-->
+            <div class="col-md-6">
+                <div id="map"></div>
+            </div>
+        </div>
+        <hr class="article-thumbnail-divider">
+    </div>
+
 
 
     <div class="modal fade" id="messageModal" role="dialog" data-keyboard="false">
@@ -143,53 +131,6 @@
 
 
     </script>
-
-
-
-    <table class="tablelist">
-        {% if member_company['country'] %}
-            <tr>
-                <td>{{ _('Company country') }}</td>
-                <td>{{ member_company['country'] }}</td>
-            </tr>{% endif %}
-        {% if member_company['region'] %}
-            <tr>
-                <td>{{ _('Company region') }}</td>
-                <td>{{ member_company['region'] }}</td>
-            </tr>{% endif %}
-        {% if member_company['city'] %}
-            <tr>
-                <td>{{ _('Company city') }}</td>
-                <td>{{ member_company['city'] }}</td>
-            </tr>{% endif %}
-        {% if member_company['address'] %}
-            <tr>
-                <td>{{ _('Company address') }}</td>
-                <td>{{ member_company['address'] }}</td>
-            </tr>{% endif %}
-        {% if member_company['phone'] %}
-            <tr>
-                <td>{{ _('Company phone') }}</td>
-                <td>{{ member_company['phone'] }}</td>
-            </tr>{% endif %}
-        {% if member_company['fax'] %}
-            <tr>
-                <td>{{ _('Company fax') }}</td>
-                <td>{{ member_company['fax'] }}</td>
-            </tr>{% endif %}
-        {% if member_company['email'] %}
-            <tr>
-                <td>{{ _('Company email') }}</td>
-                <td>{{ member_company['email'] }}</td>
-            </tr>{% endif %}
-        {% if member_company['own_portal']['host'] %}
-            <tr>
-                <td>{{ _('Company page') }}</td>
-                <td>{{ member_company['own_portal']['host'] }}</td>
-            </tr>{% endif %}
-    </table>
-    <br/>
-    <div id="map"></div>
 
 
 
