--- a/profapp/templates/front/wood1/company_contacts.html
+++ b/profapp/templates/front/wood1/company_contacts.html
@@ -84,7 +84,7 @@
                 </div>
                 <div class="modal-body">
                     <input type="hidden" name="user_id"/>
-                    <textarea></textarea>
+                    <textarea style="width: 100%"></textarea>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-success" onclick="sendMessage()"></button>
