--- a/profapp/static/front/wood1/css/custom.css
+++ b/profapp/static/front/wood1/css/custom.css
@@ -392,9 +392,16 @@ a:hover {
     color: #757575;
 }
 
+.article-social {
+    font-size: 0.875em;
+    color: #757575;
+}
+
 .company-name,
 .post-date,
-.article-comments {
+.article-comments,
+.article-read-count,
+.article-author{
     margin-right: 15px;
 }
 
@@ -674,3 +681,20 @@ a:hover {
     width: 36px;
     height: 36px;
 }
+
+
+/*TODO: YM by OZ: my classes ---->>>>*/
+.link {
+    cursor: pointer;
+    -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Chrome/Safari/Opera */
+    -khtml-user-select: none; /* Konqueror */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* Internet Explorer/Edge */
+    user-select: none;
+}
+
+.mr15px {
+    margin-right: 15px;
+}
+/*TODO: YM by OZ: my classes <<<<<---- */
