--- a/profapp/templates/front/wood1/footer.html
+++ b/profapp/templates/front/wood1/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
             <div class="container footer-content">
-                <div class="pull-left social">
+                <div class="pull-left social hide">
                     <a class="social-btn" href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a>
                     <a class="social-btn" href="#"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a>
                     <a class="social-btn" href="#"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
