--- a/profapp/templates/front/wood1/header.html
+++ b/profapp/templates/front/wood1/header.html
@@ -1,6 +1,7 @@
 <header class="navbar navbar-inverse navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
+            {% if tags and tags.all %}
             <!--Off-canvas toggle button-->
             <button type="button" class="navbar-toggle pull-left offcanvas-btn" data-toggle="offcanvas"
                     data-target=".navmenu" data-canvas="body">
@@ -15,6 +16,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
+            {% endif %}
             <a class="navbar-brand" href="/" style="width: 200px; "><img class="img-responsive" src="{{ portal.logo.url }}"></a>
         </div>
         <!--Collapsive navbar-->
