--- a/profapp/templates/front/wood1/search.html
+++ b/profapp/templates/front/wood1/search.html
@@ -5,25 +5,31 @@
 
 
 {% block body %}
+    {% import 'macros.html' as frontmacros %}
     {% include 'tags_menu.html' %}
 
-{% block center_content %}
-    {% import 'macros.html' as frontmacros %}
-    {% for message, params in search.messages.items() %}
-        <h5>{{ __(message, params) }}</h5>
-    {% endfor %}
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-lg-10">
+                {% import 'macros.html' as frontmacros %}
+                {% for message, params in search.messages.items() %}
+                    <h5>{{ __(message, params) }}</h5>
+                {% endfor %}
 
-    {% for search_item in search_results %}
-        {% if search_item._type == 'article' %}
-            {% with article=search_item %}{% include 'article_thumbnail.html' %}{% endwith %}
-        {% elif search_item._type == 'company' %}
-            {% with membership=search_item %}{% include 'member_short.html' %}{% endwith %}
-        {% endif %}
-    {% else %}
-        <h3 class="tac">{{ _('There are no items with current search criteria') }}</h3>
-    {% endfor %}
+                {% for search_item in search_results %}
+                    {% if search_item._type == 'article' %}
+                        {% with article=search_item, show_division_name=1 %}
+                            {% include 'article_thumbnail.html' %}{% endwith %}
+                    {% elif search_item._type == 'company' %}
+                        {% with membership=search_item %}{% include 'company_thumbnail.html' %}{% endwith %}
+                    {% endif %}
+                {% else %}
+                    <h3 class="tac">{{ _('There are no items with current search criteria') }}</h3>
+                {% endfor %}
 
-    {% include '_common/block_pager.html' %}
-{% endblock %}
+                {% include 'pagination.html' %}
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
